fix: Remove overflow of width

--- a/04_team/scss/05_layout/_layout.scss
+++ b/04_team/scss/05_layout/_layout.scss
@@ -1,4 +1,3 @@
 .kakaoEmoticon {
-  width: 100vw;
   padding-top: em(90);
 }
